fix shadow on mobile

--- a/src/client/style/dogo.styl
+++ b/src/client/style/dogo.styl
@@ -97,9 +97,7 @@ buttonRadius = 10px;
 		position absolute; bottom 0; width 310px; margin 0 0 8px 8px;
 		.body
 			bodyRadius = 6px; bodyWidth = 235px;
-			display inline-block; box-shadow buttonShadow; border-radius bodyRadius; width bodyWidth;
-			.focusOverlay
-				absolute top 0; width bodyWidth+6px; height 100%;
+			display inline-block; box-shadow buttonShadow; border-radius bodyRadius; width bodyWidth+8;
 			textarea
 				width bodyWidth; border 0; border 2px solid color4; border-radius bodyRadius;
 		.send.button
